@@ -1,0 +1,5 @@
+"
+" Installed As: vim/ftdetect/milkcheck.vim
+"
+au BufNewFile,BufRead /etc/milkcheck/conf/*.yaml     setlocal filetype=milkcheck
+au BufNewFile,BufRead /etc/milkcheck/conf/*.yml      setlocal filetype=milkcheck
